--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "expo": "41",
+    "expo-constants": "~10.1.3",
     "expo-status-bar": "~1.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "2.2.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-navigation": "4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
